<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/napom"
        android:title="@string/n"
        android:orderInCategory="1"
        android:icon="@drawable/n"
        />
    <item
        android:title="@string/iz"
        android:orderInCategory="1"
        android:icon="@drawable/iz"
        />
    <item
        android:title="@string/arhiv"
        android:orderInCategory="1"
        android:icon="@drawable/arhiv"
        />
    <item
        android:title="@string/sett"
        android:orderInCategory="1"
        android:icon="@drawable/sett"
        />
    <item
        android:title="@string/spravka"
        android:orderInCategory="1"
        android:icon="@drawable/spravka"
        />
</menu>